# ExynosAutoware

./: .gitignore  CMakeLists.txt  LICENSE  README.md  srcrev_tmp.txt
autoware.ai/src/autoware/common/libvectormap/: CMakeLists.txt
autoware.ai/src/autoware/common/libwaypoint_follower/: CMakeLists.txt
autoware.ai/src/autoware/common/op_planner/src/: TrajectoryDynamicCosts.cpp
autoware.ai/src/autoware/common/rubis_lib/src/: sched.cpp  sched_profiling.cpp
autoware.ai/src/autoware/common/vector_map/: CMakeLists.txt
autoware.ai/src/autoware/common/vector_map_server/: CMakeLists.txt
autoware.ai/src/autoware/core_perception/lidar_euclidean_cluster_detect/: CMakeLists.txt
autoware.ai/src/autoware/core_perception/lidar_euclidean_cluster_detect/include/: cluster.h
autoware.ai/src/autoware/core_perception/lidar_imm_ukf_pda_track/: CMakeLists.txt
autoware.ai/src/autoware/core_perception/lidar_imm_ukf_pda_track/launch/: imm_ukf_pda_track.launch
autoware.ai/src/autoware/core_planning/op_global_planner/nodes/: op_global_planner_core.cpp
autoware.ai/src/autoware/core_planning/op_local_planner/: package.xml
autoware.ai/src/autoware/messages/rubis_msgs/: CMakeLists.txt
autoware_ws/src/autoware/common/libwaypoint_follower/: package.xml
autoware_ws/src/autoware/common/map_file/: package.xml
autoware_ws/src/autoware/common/op_ros_helpers/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/common/op_utility/: CMakeLists.txt
autoware_ws/src/autoware/common/vector_map/: package.xml
autoware_ws/src/autoware/core_perception/lidar_euclidean_cluster_detect/: CMakeLists.txt  CMakeLists.txt.origin  package.xml
autoware_ws/src/autoware/core_perception/lidar_imm_ukf_pda_track/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/core_perception/lidar_localizer/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/core_perception/points_preprocessor/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/core_perception/twist_generator/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/core_perception/vision_beyond_track/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/core_planning/op_global_planner/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/core_planning/op_local_planner/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/core_planning/pure_pursuit/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/core_planning/twist_filter/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/core_planning/twist_gate/: CMakeLists.txt  package.xml
autoware_ws/src/autoware/utilities/calibration_publisher/: CMakeLists.txt  package.xml
autoware_ws/src/drivers/awf_drivers/analog_devices/: package.xml
autoware_ws/src/drivers/awf_drivers/as/: CMakeLists.txt  package.xml
autoware_ws/src/drivers/awf_drivers/autoware_driveworks_gmsl_interface/: CMakeLists.txt  package.xml
autoware_ws/src/drivers/awf_drivers/autoware_driveworks_interface/: CMakeLists.txt  package.xml
autoware_ws/src/drivers/awf_drivers/baumer/: CMakeLists.txt  package.xml
autoware_ws/src/drivers/awf_drivers/garmin/: CMakeLists.txt  package.xml
autoware_ws/src/drivers/awf_drivers/hokuyo/: CMakeLists.txt  package.xml
autoware_ws/src/drivers/awf_drivers/vectacam/: CMakeLists.txt  package.xml
autoware_ws/src/drivers/awf_drivers/ymc/: CMakeLists.txt  package.xml
autoware_ws/src/drivers/ds4/ds4/: package.xml
autoware_ws/src/drivers/ds4/ds4_msgs/: package.xml
backup/event_driven/rubis_ws/src/rubis_logger/: CMakeLists.txt
event_driven/src/autoware/messages/autoware_msgs/: CMakeLists.txt
rubis_ws/src/camera_image/: CMakeLists.txt  package.xml
rubis_ws/src/camera_image/src/: camera_image.cpp
rubis_ws/src/control_module/: CMakeLists.txt  package.xml
rubis_ws/src/controller/: CMakeLists.txt  package.xml
rubis_ws/src/gnss_converter/: CMakeLists.txt  package.xml
rubis_ws/src/gnss_converter/src/: gnss_converter.cpp
rubis_ws/src/image_transport/: CMakeLists.txt
rubis_ws/src/inertiallabs_ins/: CMakeLists.txt  package.xml
rubis_ws/src/inertiallabs_msgs/: package.xml
rubis_ws/src/inertiallabs_ros_pkgs/: package.xml
rubis_ws/src/ins_twist_generator/: CMakeLists.txt  package.xml
rubis_ws/src/rubis_autorunner/: CMakeLists.txt  package.xml
rubis_ws/src/rubis_autorunner/cfg/cubetown_autorunner/: cubetown_autorunner_params.yaml
rubis_ws/src/rubis_autorunner/cfg/rubis_testbed_autorunner/: rubis_testbed_autorunner_params.yaml
rubis_ws/src/rubis_autorunner/scripts/cubetown_autorunner/: _cubetown_autorunner_2_localization.launch  _cubetown_autorunner_3_detection.launch  _cubetown_autorunner_4_planning.launch
rubis_ws/src/rubis_autorunner/scripts/rubis_testbed_autorunner/: _rubis_testbed_autorunner_2_localization.launch  _rubis_testbed_autorunner_3_detection.launch
rubis_ws/src/rubis_autorunner/src/cubetown_autorunner/: cubetown_lkas_autorunner_node.cpp
rubis_ws/src/rubis_logger/: package.xml
rubis_ws/src/rubis_pkg/: CMakeLists.txt  package.xml
rubis_ws/src/rubis_pkg/src/: gnss_localizer.cpp  lidar_republisher.cpp
rubis_ws/src/sensing_utils/: CMakeLists.txt  package.xml
rubis_ws/src/vision_darknet_detect_opencl/: CMakeLists.txt  package.xml
rubis_ws/src/vision_darknet_detect_opencl/src/: vision_darknet_detect_opencl.cpp  vision_darknet_detect_opencl.h
rubis_ws_0205/src/vision_darknet_detect_opencl/darknet/src/: parser.c
rubis_ws_0205/src/vision_darknet_detect_opencl/src/: vision_darknet_detect_opencl_node.cpp
rubis_ws_old/src/rubis_autorunner/scripts/cubetown_autorunner/: _cubetown_autorunner_5_control.launch
scripts/: desktop_init.sh  ionic_init.sh
scripts/cubetown_autorunner/: _cubetown_autorunner_1_sensing.launch  _multi_lidar_1_sensing.launch  test.launch
scripts/ionic_FMTC_red_course/: _ionic_autorunner_1_sensing.launch
scripts/tutorial_autorunner/: _tutorial_autorunner_1_sensing.launch
src/cubetown_autorunner/: cubetown_full_autorunner.cpp
yocto_tools/: a.txt  copy_source.py  create_recipes.py  move_recipes.sh  synchronize_source.py  update_branches.py  update_repository.py  yocto_tools_lib.py
(+33 files in other folders)
