<?xml version="1.0"?>
<package format="2">
  <name>controller</name>
  <version>0.0.0</version>
  <description>The controller package</description>
  <maintainer email="hypark@todo.todo">hypark</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  
</package>
