<?xml version="1.0"?>
<package>
  <name>inertiallabs_ins</name>
  <version>1.0.0</version>
  <description>The Inertial Labs INS package</description>

  <maintainer email="omprakashpatro@gmail.com">Omprakash Patra</maintainer>
  <url type="website">http://exmaple.com</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</run>
  <depend>rospy</run>
  <depend>std_msgs</run>
  <depend>geometry_msgs</run>
  <depend>actionlib_msgs</run>
  <depend>inertiallabs_msgs</run>
  <depend>dynamic_reconfigure</run>
  <depend>visualization_msgs</run>
  <depend>tf</run>
  <depend>sensor_msgs</run>

  <depend>libopencv-dev</depend>

  <export>

  </export>
</package>
