<?xml version="1.0"?>
<package>
  <name>inertiallabs_msgs</name>
  <version>1.0.0</version>
  <description>The Inertial Labs Message package</description>

 <maintainer email="omprakashpatro@gmail.com">Omprakash Patra</maintainer>
  <url type="website">http://exmaple.com</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
