<?xml version="1.0"?>
<package format="2">
  <name>inertiallabs_ros_pkgs</name>
  <version>1.3.0</version>
  <description>
    ROS packages for the Inertial Labs (meta package)
  </description>

  <maintainer email="omprakashpatro@gmail.com">Omprakash Patra</maintainer>
  <url type="website">https://inertiallabs.com</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>inertiallabs_msgs</depend>
  <exec_depend>inertiallabs_ins</depend>

  <export><metapackage/></export>
</package>
