<?xml version="1.0"?>
<package format="2">
  <name>ins_twist_generator</name>
  <version>0.0.0</version>
  <description>The ins_twist_generator package</description>

  <maintainer email="kite9240@gmail.com">HayeonP</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rubis_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>can_data_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rubis_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>can_data_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rubis_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>can_data_msgs</exec_depend>

</package>

